# filtering_pgms

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_main.sh
cmake/Modules/: ._MacroOutOfSourceBuild.cmake  FindPatrecII.cmake  FindSPTK.cmake  MakeVoiceList.cmake
cmake/Templates/: iPhoneBundleInfo.plist.in
cmake/Toolchains/: Android-1.6-toolchain.cmake  WindowsMobile-6.1-toolchain.cmake  iPhone-toolchain.cmake  iPhoneSimulator-toolchain.cmake
include/: algorithmic_steps.hpp  hellinger.hpp  hungarian.hpp  model_declaration.hpp  ospa.hpp  system_constants.hpp  utils.hpp
matlab/: hellingerDistance.m  plotResults.m  plotTrialResults.m  readIniFiles.m  readTrialFile.m  testUHellingerGMM.m
matlabEquivalent/: exactTomb.m  generateGroundTruth.m  generateModel.m  jipdaf.m  jpdaf.m  likelihoodTest.m  plotResults.m  runFilter.m  runFilterJipdaf.m  runJpdaf.m  setPath.m  speedTest.m
matlabEquivalent/common/: Hungarian.m  euclideanOspa.m  hellingerDistance.m  hellingerOspa.m  hellingerOspaSpecific.m  leftMultiprod.m  loopyBeliefPropagation.m  multiprod.m  ospaSpecific.m  quadraticMultiprod.m  rightMultiprod.m  simplifiedMultinv.m  simplifiedMultiprod.m  swapcolumns.c  swapcolumns.mexa64
matlabEquivalent/linearFilters/: generateGroundTruth.m  generateModel.m  jipdafWithLoops.m  jpdaf.m  plotResults.m  resultsToTikz.m  runFilters.m
matlabEquivalent/nonLinearFilters/: generateNonLinearGroundTruth.m  generateNonLinearModel.m  generateNonlinearModel.m  runNonLinearFilters.m  ukJipdaf.m
matlabEquivalent/runTrials/: generateTrialGroundTruth.m  runTrials.m
matlabEquivalent/statisticsToolBox/: binornd.m  gamrnd.m  mvnrnd.m  poissrnd.m  rndcheck.m
plotting/: lbp.m  lbpTest.m  plotResults.m  plotTrialResults.m  readTrialFile.m
plotting/drawTools/: getAllSigmaPointsOnMixture.m
plotting/uHellingerGMM/: uHellingerJointSupport2_ND.m
src/: CMakeLists.txt  algorithmic_steps.cc  hellinger.cc  hungarian.cc  main.cc  model_declaration.cc  ospa.cc  system_constants.cc  utils.cc
test/: CMakeLists.txt  CMakeLists.txt~  run_tests.cc  test_hellinger.cc  test_hungarian.cc  test_lbp.cc  test_utils.cc
